--- a/src/scss/components/_Admin.scss
+++ b/src/scss/components/_Admin.scss
@@ -1,5 +1,5 @@
 .admin-page {
-    .admin-page_content {
+    .admin-page__content {
         width: 100%;
         display: grid;
         background: rgb(245, 246, 250);
@@ -30,6 +30,15 @@
         .admin__content-outlet {
             margin-top: -10px;
             padding: 0 20px;
+            form {
+                margin: 20px 0;
+                display: flex;
+                flex-direction: column;
+                gap: 40px;
+                .form__input {
+                    width: 100%;
+                }
+            }
         }
     }
 }
