--- a/src/scss/components/_Admin.scss
+++ b/src/scss/components/_Admin.scss
@@ -1,6 +1,6 @@
 .admin-page {
     .admin-page__content {
-        height: 100vh;
+        height: 200%;
         width: 100%;
         display: grid;
         background: rgb(245, 246, 250);
